[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/images/custom/moving_spike/moving_spike.png" type="Texture" id=1]
[ext_resource path="res://source/MovingSpike/MovingSpike.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 1 )
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( 3, 2, 3 )

[sub_resource type="CylinderMesh" id=3]
top_radius = 0.0
bottom_radius = 0.3
height = 0.3
radial_segments = 4
rings = 0

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.6, 0.6, 0.6 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.5, 0.15, 0.5 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 0.15, 0.5, 0.5 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.5, 0.5, 0.15 )

[node name="MovingSpike" type="KinematicBody" groups=["enemy"]]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
skeleton = NodePath("")
material/0 = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0.65, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("")
material/0 = SubResource( 4 )

[node name="MeshInstance6" type="MeshInstance" parent="."]
transform = Transform( 0.707107, 6.18172e-08, 0.707107, 0, -1, 8.74228e-08, 0.707107, -6.18172e-08, -0.707107, 0, -0.65, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("")
material/0 = SubResource( 4 )

[node name="MeshInstance5" type="MeshInstance" parent="."]
transform = Transform( 0.707107, 0, -0.707107, -0.707107, -4.37114e-08, -0.707107, -3.09086e-08, 1, -3.09086e-08, 0, 0, 0.65 )
mesh = SubResource( 3 )
skeleton = NodePath("")
material/0 = SubResource( 4 )

[node name="MeshInstance8" type="MeshInstance" parent="."]
transform = Transform( -0.707107, -7.462e-08, 0.707107, -0.707107, -3.09086e-08, -0.707107, 7.462e-08, -1, -3.09086e-08, 0, 0, -0.65 )
mesh = SubResource( 3 )
skeleton = NodePath("")
material/0 = SubResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 1, 0, -0.707107, -3.09086e-08, 0.707107, 0.707107, 3.09086e-08, 0.707107, 0.65, 0, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("")
material/0 = SubResource( 4 )

[node name="MeshInstance4" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 1, 0, -0.707107, -3.09086e-08, 0.707107, 0.707107, 3.09086e-08, 0.707107, 0.65, 0, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("")
material/0 = SubResource( 4 )

[node name="MeshInstance7" type="MeshInstance" parent="."]
transform = Transform( -1.81058e-08, -1, -6.18172e-08, -0.707107, -3.09086e-08, 0.707107, -0.707107, 5.65142e-08, -0.707107, -0.65, 0, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("")
material/0 = SubResource( 4 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 6 )

[node name="NavigationObstacle" type="NavigationObstacle" parent="."]

[node name="Up" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Up"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0 )
shape = SubResource( 7 )

[node name="Down" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Down"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.65, 0 )
shape = SubResource( 7 )

[node name="Left" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Left"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.65, 0, 0 )
shape = SubResource( 9 )

[node name="Right" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Right"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.65, 0, 0 )
shape = SubResource( 9 )

[node name="Back" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Back"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.65 )
shape = SubResource( 8 )

[node name="Front" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Front"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.65 )
shape = SubResource( 8 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="Up" to="." method="_on_Up_body_entered"]
[connection signal="body_entered" from="Down" to="." method="_on_Down_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="body_entered" from="Back" to="." method="_on_Back_body_entered"]
[connection signal="body_entered" from="Front" to="." method="_on_Front_body_entered"]
